Reconfigure webpack to edit antd themes with SASS

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.css';
+// @import '~antd/dist/antd.css';
 @import './scss/0-helpers/0-helpers';
 @import './scss/1-base/1-base';
 @import './scss/2-layout/2-layout';
